--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.1.0"
+    "react-markdown": "^7.1.0",
+    "webpack": "^5.62.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.7",
