Added new component, layed out blog posts

--- a/server/api/posts/models/posts.settings.json
+++ b/server/api/posts/models/posts.settings.json
@@ -32,6 +32,18 @@
     },
     "Post_ID": {
       "type": "biginteger"
+    },
+    "Img": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "files",
+        "images",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
