--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"cd server && npm run develop\"",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "concurrently": "^6.4.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
